--- a/publish/manifest.json
+++ b/publish/manifest.json
@@ -1,9 +1,10 @@
 {
   "name": "Expand_World_Factions",
-  "version_number": "1.4.0",
+  "version_number": "1.5.0",
   "website_url": "https://github.com/JereKuusela/valheim-expand_world_factions",
   "description": "Allows adding new factions and changing existing ones.",
   "dependencies": [
-    "denikson-BepInExPack_Valheim-5.4.2202"
+    "denikson-BepInExPack_Valheim-5.4.2202",
+    "ValheimModding-YamlDotNet-16.3.0"
   ]
 }
